--- a/03-reviews/setup/index.html
+++ b/03-reviews/setup/index.html
@@ -15,6 +15,35 @@
   </head>
   <body>
     <h1>review project</h1>
+    <main>
+      <section class="container">
+      <!--Title -->
+      <div class="title">
+        <h2>Our reviews</h2>
+        <div class="underline"></div>
+      </div>
+      <!--Review-->
+      <article class="review">
+        <div class="img-container">
+          <img src="person-1.jpeg" id="person-img" alt="Image of person">
+        </div>
+        <h4 id="author">Sara Jones</h4>
+        <p id="job"></p>
+        <p id="info"></p>
+        <!--prev and next buttons-->
+        <div class="button-container">
+          <button class="prev-btn">
+            <i class="fas fa-chevron-left"></i>
+          </button>
+          <button class="next-btn">
+            <i class="fas fa-chevron-right"></i>
+          </button>
+        </div>
+          <!--random button-->
+          <button class="random-btn">Surprise Me!</button>
+      </article>
+      </section>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
